# roon_pytui

./: .gitignore  CHANGELOG.md  CI_CHECKLIST.md  CI_SETUP_SUMMARY.md  CLAUDE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  test_discovery.py
.github/: CI.md  CONTRIBUTING.md  README.md  dependabot.yml  pull_request_template.md  workflows-diagram.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  pr.yml
src/roon_pytui/: __init__.py  main.py
src/roon_pytui/config/: manager.py
src/roon_pytui/connection/: __init__.py  discovery.py  manager.py
src/roon_pytui/models/: __init__.py  connection.py
src/roon_pytui/ui/: __init__.py  app.py  screens.py
tests/: __init__.py
tests/unit/: test_config_manager.py  test_connection_manager.py
